# ChangeLog for dev-python/bsddb3
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/bsddb3/ChangeLog,v 1.107 2014/07/28 13:43:16 ago Exp $

  28 Jul 2014; Agostino Sarubbo <ago@gentoo.org> bsddb3-6.0.1.ebuild:
  Stable for ppc, wrt bug #512012

*bsddb3-6.1.0 (27 Jul 2014)

  27 Jul 2014; Ian Delaney <idella4@gentoo.org> +bsddb3-6.1.0.ebuild:
  bump; drop py2.6, upgrade test phase

  16 Jul 2014; Pacho Ramos <pacho@gentoo.org> bsddb3-6.0.1.ebuild:
  amd64/x86 stable, bug #516176

  20 May 2014; Ian Delaney <idella4@gentoo.org> bsddb3-6.0.1.ebuild:
  add py3.4 support

  19 May 2014; Mike Gilbert <floppym@gentoo.org> bsddb3-6.0.1.ebuild:
  Set BERKELEYDB envvars instead of passing them as arguments to setup.py.

  19 May 2014; Mike Gilbert <floppym@gentoo.org> bsddb3-6.0.1.ebuild:
  Fixup distutils-r1 conversion, and fix build with newer multilib-enabled sys-
  apps/db.

  01 Apr 2014; Ian Delaney <idella4@gentoo.org>+files/py3tests.patch,
  bsddb3-6.0.0.ebuild:
  install phase tidied, un-needed removal of tests folders removed, 
  test phase revised and fixed for py3 due to flaws in the source
  code's setup, includes the patch. Fixes Bugs #493500 by Nikoli and 
  #476246 by Patrick

  15 Jan 2014; Agostino Sarubbo <ago@gentoo.org> bsddb3-6.0.0.ebuild:
  Stable for sparc, wrt bug #482056

  15 Jan 2014; Agostino Sarubbo <ago@gentoo.org> bsddb3-6.0.0.ebuild:
  Stable for ppc, wrt bug #482056

  15 Jan 2014; Agostino Sarubbo <ago@gentoo.org> bsddb3-6.0.0.ebuild:
  Stable for ppc64, wrt bug #482056

  15 Jan 2014; Agostino Sarubbo <ago@gentoo.org> bsddb3-6.0.0.ebuild:
  Stable for alpha, wrt bug #482056

*bsddb3-6.0.1 (08 Jan 2014)

  08 Jan 2014; Patrick Lauer <patrick@gentoo.org> +bsddb3-6.0.1.ebuild:
  Bump

  07 Dec 2013; Akinori Hattori <hattya@gentoo.org> bsddb3-6.0.0.ebuild:
  ia64 stable wrt bug #482056

  11 Oct 2013; Markus Meier <maekke@gentoo.org> bsddb3-6.0.0.ebuild: