@@ -14,23 +14,13 @@ EBUILD bsddb3-5.3.0-r1.ebuild 1928 SHA256 93d755b486528c4e79096affb1732e73c12b06
 EBUILD bsddb3-5.3.0.ebuild 1797 SHA256 c22a9969c59694758268c49e7616611cce850ae865d41932716f270d637b3491 SHA512 bf438260898fd7e7d3605af5980beb93c4d1e132e738df5abc1afd496da00877d585e98f68a5da7c016a70c7888da544b6602a1003ba561b23f8a3f20e4974ab WHIRLPOOL e3b4e7f0da87ae85f7398753d927a1f2c9188650ff61f503a7f928c09f07feaf756db8540b1193b5104f3e819df6352ebae4580f329d95283bf77c790227fdf9
 EBUILD bsddb3-6.0.0.ebuild 2071 SHA256 9e1a887f9d57e8669e556c9bcd082144d6b10f2120bf73148287803bb02e9ee6 SHA512 7d6fcc8436dfcf57ea0cc7c00c0d63abda29af293a4916bd305b3747fac618106701d91110ce24dc9f98a34ed85e4e68971fd5ab57a783f0311fad4b855f62d7 WHIRLPOOL e4f5b2796ac37e72fb1a12cc07c2fb47bafbaf50974443898777c63637f70358ebc77133dd86f3131c5e3b62d087e2380df7cccc734f22700566efa614731daa
 EBUILD bsddb3-6.0.1.ebuild 1779 SHA256 b052c772590774b0430282cad4ecd471ad3695f547e8e08b480c2420b1e8f49d SHA512 451a0fd6767ed2f5dba0ddfb64143bee2fa6deceecf57ebc9371e314b13830c330f307cbfc6b257c536c5cd6bcea75c5ac4a3e7db64a5cff0f866f7603827efc WHIRLPOOL 645a391694585794d23a7f5ad3b50b2a76cdbedd45a96ce54b6f63bd0b056f5cab6747fb429502ca658980c86aa9b0d87318c4ce325e778afc4da1ab3e1df8b9
-EBUILD bsddb3-6.1.0.ebuild 1918 SHA256 02e50c1e77d3a18bacb77eadda6bd74387e04a783da906ee1144e1d8a90f93a2 SHA512 12353612fa5a01a923e4ae10f3e815f11a5644c8789b45616576af617d36d963c7b5f15b0031c84bec9a34b787aad67b422450fed3f9505a9850f511aae26ad6 WHIRLPOOL b768cbbaee7e5e55f71601b7f29b75aa405fd397e17b7ed5a7bea3361c030fcaa78317486ee1942ba80fac4b6b87c2d428f1507a6a0b8b4d1d9ce5fdf6a456df
-MISC ChangeLog 13480 SHA256 01ec00020561687842cccaffd50796bbd34eff02e0616bcfb03b6653f1ec0047 SHA512 06013b355bb2c5fd9d2b8acf378abe5e22ed9825965597e92117aca8a9070b27759a6981ebe622da001c451a1a15dd13ac9b899bafa0b5a10be5b4f4b65dc972 WHIRLPOOL 6a67ed79fc79efcd9e434b9be1090d92dd8edff3ced091ee0179a8e33187123e5900b4996560bfb1bb8d25088d8005bb2f66f86e13eef4ef6d061744dfac24f9
+EBUILD bsddb3-6.1.0.ebuild 2320 SHA256 bc57046e834fbd30e453092e4eb697e3e78f07e2beee4759635bbf0b81fdffd2 SHA512 e062d27991d1de48c6ad47fdd75e22e987effaae4d263708cf5ac60f3e829f2a1a8c802ad7fafb84fe8da1eb28508068680a925b1a06c4039973410b9cd9647f WHIRLPOOL 1e31cded9473e18cca883228626e0c8bb1855fffed50e8d3194294fdac352b89b9d3f0f238ca453002f5e22b096cfa2fe469b91583da121c0a2666d123031802
+MISC ChangeLog 13629 SHA256 1ef3aafe0185db21c9f230992cc4e28100cb8270723407bda13f1aca63841697 SHA512 6194230d9b14a4954532fc6e8eebc1b1d66928eacf65e5dee8e8be5fe61464f84daebdb6ce027972ad17b709a7164ff3ad7a52fef8aa8f88b02a3f0fd621739e WHIRLPOOL fdeb75ac8d9ed4a5b54fdb817e05c815cafca2da31c5a8dc28f21a0cea00bef2399599e33401f6061c53c16fcbd3f952782884637f8cc735751098c464ac6ebb
 MISC metadata.xml 229 SHA256 deca31172b77151b3139dfaed2c167a0b52849981f10c7fc8c8ebf8bffdbd1da SHA512 be71168c3d6afae44ec7b2ba090d518feee71b53aeb4291be18a68f71b2d12bc97a600a565066a86194da5f8e448850007f1ac10a9d0b4ae705cbae4f21a5854 WHIRLPOOL c6441aea3df06cffbc9fe3facc2eb5e2b7c880ea9b73ef5e3e84ef49e2a7f5aecd51dcb127dcb2c27c7ddef88eeea473ea971536c923b6f7ba81b05ca5227a87
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJT1lN1AAoJELp701BxlEWfz+sP/0DbhuGaWGwVYOJnfANT0EQe
-cnf2z5MgS+v2o6vz09WwcR9+XU6Nls9V4YQLPM7HZPSQYj1LAY2iCfrgV5o4sdbj
-0p2fTfhYnJEMIV44QnXJ/wWeCrzJoa7d9dpj5lMTELEM1mSNYfIz8GCFgmOt2ue6
-hAQfg+mqvOjuk2StmoMFdm6RWPkViLyIjR16wjojK/Bd9xVqmCjzrTvl7N34/U2F
-bc/vLaLileCCUmInXobDY/oafgY7NYlKYI9sALjSuyajqi7aYf/wguC/GudasAU4
-KuERmm1MwOxKz6GFGA34UB22fq3YlmB47y5nUs50rZXncg/b0NWh0n1pkHfE8I/2
-pVy2Fc0rMRtJEyoDnPDLl1AHJ593lytdJ1r9KdLpllJGAxr8kspPs6yr63hc1rnT
-2hUEQEN8v1QP2FQZlWYtOfw4HHt75dMVTiaMOCUKOIicIY0o1ufzjKUcys4Q3CUh
-l2cYFVwOK73xY5h6ZlWWTuaSputwrKN7JBRJVqgfWhhOsLNjUZMWm40Owd1G5ET+
-QIvhshmsNLVmykteyoPjSpo87Kq51KL/OUyG5NJMvTNGrxuB7SVtiWF1zXB1aM9u
-yHvvgyNg3eUmXUBLjwEIh5Sr8FEr5KJoOhxFx0CKMAuoapKKqDiu7Os/LOqyX4E1
-M3y2WzC0K5tXHAYy9Zgx
-=CFNN
+iF4EAREIAAYFAlPec/4ACgkQC77qH+pIQ6TpuwD9EStFZbI19Uw/ti+Dk/f4HawU
+z6mQVI00Qh1Fg9cF1LEBAJvHVaHuV4Sd2QbPZ2ZmpdfY+v6E8L8xH3T2WWR5cx0f
+=C77U
 -----END PGP SIGNATURE-----
