@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/bsddb3/bsddb3-6.1.0.ebuild,v 1.1 2014/07/27 00:37:27 idella4 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/bsddb3/bsddb3-6.1.0.ebuild,v 1.2 2014/08/03 17:40:12 floppym Exp $
 
 EAPI=5
 PYTHON_COMPAT=( python{2_7,3_2,3_3,3_4} )
@@ -14,10 +14,30 @@ SRC_URI="mirror://pypi/${PN:0:1}/${PN}/${P}.tar.gz"
 LICENSE="BSD"
 SLOT="0"
 KEYWORDS="~alpha ~amd64 ~arm ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~amd64-linux ~x86-linux"
-IUSE="doc"
+IUSE="bindist doc"
 
-RDEPEND=">=sys-libs/db-4.8.30
-	<sys-libs/db-6.1"
+RDEPEND="
+	bindist? (
+		|| (
+			sys-libs/db:5.3=
+			sys-libs/db:5.2=
+			sys-libs/db:5.1=
+			sys-libs/db:5.0=
+			sys-libs/db:4.8=
+		)
+	)
+	!bindist? (
+		|| (
+			sys-libs/db:6.1=
+			sys-libs/db:6.0=
+			sys-libs/db:5.3=
+			sys-libs/db:5.2=
+			sys-libs/db:5.1=
+			sys-libs/db:5.0=
+			sys-libs/db:4.8=
+		)
+	)
+"
 DEPEND="${RDEPEND}
 	dev-python/setuptools[${PYTHON_USEDEP}]"
 
@@ -25,7 +45,9 @@ DISTUTILS_IN_SOURCE_BUILD=1
 
 src_prepare() {
 	# This list should be kept in sync with setup.py.
-	for DB_VER in 6.0 5.3 5.2 5.1 5.0 4.8; do
+	local db_bindist
+	use bindist || db_bindist="6.1 6.0"
+	for DB_VER in ${db_bindist} 5.3 5.2 5.1 5.0 4.8; do
 		has_version "sys-libs/db:${DB_VER}" && break
 	done
 
@@ -44,8 +66,9 @@ src_prepare() {
 src_configure() {
 	# These are needed for both build and install.
 	export BERKELEYDB_DIR="${EPREFIX}/usr"
-	export BERKELEYDB_INCDIR="${EPREFIX}$(db_includedir)"
+	export BERKELEYDB_INCDIR="${EPREFIX}$(db_includedir ${DB_VER})"
 	export BERKELEYDB_LIBDIR="${EPREFIX}/usr/$(get_libdir)"
+	export YES_I_HAVE_THE_RIGHT_TO_USE_THIS_BERKELEY_DB_VERSION=1
 }
 
 python_compile() {
