@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/bsddb3
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/bsddb3/ChangeLog,v 1.107 2014/07/28 13:43:16 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/bsddb3/ChangeLog,v 1.108 2014/08/03 17:40:12 floppym Exp $
+
+  03 Aug 2014; Mike Gilbert <floppym@gentoo.org> bsddb3-6.1.0.ebuild:
+  Introduce bindist use flag to control dependency on db-6.x. Bug 494490.
 
   28 Jul 2014; Agostino Sarubbo <ago@gentoo.org> bsddb3-6.0.1.ebuild:
   Stable for ppc, wrt bug #512012
